actually working now for simple PEC walls

--- a/examples/test.ini
+++ b/examples/test.ini
@@ -1,6 +1,7 @@
-[heading]
-mystring = 'this is a string'
-myint = 4
+[MESH]
+N = 400
+L = 2.0e-6
 
-[another heading]
-myfloat = 1.2e-8
+[RUN]
+dt = 1e-18
+NSTEPS = 7000
